Add initial CMS structure and Firebase integration
- Created core files for the CMS including `admin.html`, `admin.js`, and `admin.css` for the admin panel interface.
- Implemented Firebase configuration and database rules in `firebase.json` and `database.rules.json`.
- Added services for authentication and content management in `src/services/`.
- Introduced models for content management in `src/models/`.
- Included scripts for user management and deployment setup in `scripts/`.
- Established a build process for static site generation and deployment to Netlify.
- Documented setup and usage instructions in various markdown files.

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,18 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Firebase config (contiene credenciales)
+firebase-config.js
+
+# Cloudinary config (contiene credenciales)
+src/utils/cloudinary-config.js
+
+# Service Account Key (contiene credenciales sensibles)
+service-account-key.json
+
+# Build output
+dist/
+
+# Local Netlify folder
+.netlify
