Add GitHub Secrets and Netlify Build Configuration
- Added `ADD_GITHUB_SECRETS.md` to document the process of adding necessary secrets for GitHub Actions deployment to Netlify.
- Created `NETLIFY_BUILD_CONFIG.md` to outline the recommended build configuration using GitHub Actions instead of Netlify's build process.
- Updated `netlify.toml` to disable the build command, indicating that builds will be handled by GitHub Actions.
- Introduced scripts (`add-github-secrets.sh`, `get-secrets.sh`) to automate the addition and retrieval of GitHub secrets.
- Modified `build-static.js` to load the Firebase service account from an environment variable or a local file, enhancing security and flexibility.
- Ensured comprehensive documentation for setup and troubleshooting related to GitHub Actions and Netlify integration.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,11 +1,12 @@
+# Build deshabilitado - Se usa GitHub Actions para build y deploy
+# El build se hace en GitHub Actions y luego se despliega a Netlify
+
 [build]
   publish = "dist"
-  command = "npm run build"
+  # command comentado - el build se hace en GitHub Actions
+  # command = "npm run build"
 
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
-
-[build.environment]
-  NODE_VERSION = "18"
