Add configuration files for setting up deployment secrets
- Introduced `CONFIGURAR_SECRETS.md`, `QUICK_SETUP.md`, and `SETUP_SECRETS_GUIDE.md` to provide comprehensive instructions for configuring necessary secrets for GitHub Actions and Netlify.
- Added a script `setup-secrets.sh` to automate the process of obtaining and setting up secrets in GitHub.
- Updated the GitHub Actions workflow in `deploy-netlify.yml` to include verification steps for the build output.
- Enhanced the static build script in `build-static.js` to ensure proper closure of Firebase connections after the build process.
- Improved documentation for troubleshooting and verifying the setup of secrets and environment variables.

--- a/.github/workflows/deploy-netlify.yml
+++ b/.github/workflows/deploy-netlify.yml
@@ -41,6 +41,16 @@ jobs:
       
       - name: Build static site
         run: npm run build
+        env:
+          FIREBASE_SERVICE_ACCOUNT: ${{ secrets.FIREBASE_SERVICE_ACCOUNT }}
+      
+      - name: Verify dist directory
+        run: |
+          echo "📁 Contenido de dist/:"
+          ls -la dist/ || echo "⚠️  dist/ no existe"
+          echo ""
+          echo "📄 Verificando index.html:"
+          test -f dist/index.html && echo "✅ index.html existe" || echo "❌ index.html no existe"
       
       - name: Deploy to Netlify
         uses: netlify/actions/cli@master
