Add publish functionality to the admin panel
- Introduced a "Publicar" button in the admin header for triggering site publication.
- Implemented the `handlePublish` method in `admin.js` to manage the publication process, including user authentication and GitHub commit creation.
- Enhanced `publish.js` to handle the GitHub API requests for creating empty commits to trigger GitHub Actions for deployment.
- Updated `admin.css` to style the new header actions.
- Added `CONFIGURAR_PUBLICACION.md` to document the publication setup process and requirements.

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,7 +6,10 @@
   # command comentado - el build se hace en GitHub Actions
   # command = "npm run build"
 
+# Netlify sirve archivos estáticos automáticamente (admin.html, admin.js, admin.css, etc.)
+# Solo redirigimos rutas que no son archivos estáticos a index.html (SPA)
 [[redirects]]
   from = "/*"
   to = "/index.html"
   status = 200
+  force = false
