Refactor Netlify configuration and build script comments to remove unnecessary redirects
- Updated `netlify.toml` to clarify that no redirects are needed for static sites served by Netlify.
- Modified `build-static.js` to remove the creation of `_redirects`, emphasizing that static files are served directly without additional routing.

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,15 +6,5 @@
   # command comentado - el build se hace en GitHub Actions
   # command = "npm run build"
 
-# IMPORTANTE: Netlify sirve archivos estáticos automáticamente
-# El redirect /* solo aplica cuando el archivo NO existe físicamente
-# Los archivos con extensiones (.js, .css, etc.) se sirven automáticamente
-# Solo redirigimos rutas que NO son archivos estáticos a index.html (SPA)
-
-# Redirigir todo lo demás a index.html (SPA)
-# Nota: force = false significa que NO fuerza el redirect si el archivo existe
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
-  force = false
+# Sitio estático - No se necesitan redirects
+# Netlify sirve los archivos estáticos directamente
